testsuite/tests/lexical_envs/invalid_env_spec/test.out
== foo.lkt ==
foo.lkt:17:5: error: env specs are allowed in nodes only
17 |     env_spec {
   |     ^


lkt_compile: Done
